--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DATABASE=mongodb+srv://yogeshkumarsingla007:AgriConnect@cluster0.9aqtuhn.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://yogeshkumarsingla007:<passwd>@cluster0.9aqtuhn.mongodb.net/?retryWrites=true&w=majority
 PORT=8000
 BRAINTREE_MERCHANT_ID=n74dc2kw9g3ws389
 BRAINTREE_PUBLIC_KEY=bgytmgzhz5f6t2tg
